# app-builder

./: .gitattributes  .gitignore  Application.yaml  README.md  app_builder.yaml  application.yaml  mypy-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  run_tests.cmd  run_tests.py  test-requirements.txt
app_builder/: __init__.py  __main__.py  app_builder__misc.py  app_builder__paths.py  app_builder__python_and_r_sources.py  app_builder__versioning.py  build.py  config.py  config_interpolation.py  create_github_release.py  create_release.py  create_releases.py  errors.py  exec_py.py  exewrap.py  file_pattern_7zip.py  fileset.py  get_dependencies.py  git_revision.py  hooks.py  installer_bundle.py  main.py  paths.py  poetry_dependencies.py  project.py  pydantic_models.py  python_runtime.py  run_and_suppress.py  schema.py  schema_core.py  schema_export.py  scripts.py  sevenzip.py  shell.py  template.py  util.py  versioned_main.py
app_builder_meta/: __main__.py  config_probe.py  dispatch.py  legacy_0x.py  main.py  version_cache.py
app_tools/: git_revision.py  main.py  paths.py  shell.py  versioned_main.py
docs/: app-builder-help.html  configuration.md  exewrap-zip-installer-plan.html  release-pipeline.md
scripts/: build_legacy_0x_bridge.py  post-dependencies.cmd  post-install.cmd  post-install.ps1  post-uninstall.ps1  pre-build.cmd
test/: test_app_builder_meta.py  test_app_builder_meta_launcher.py  test_build_hooks.py  test_cli_help.py  test_config.py  test_doctests.py  test_end_to_end.py  test_file_pattern_7zip.py  test_hooks.py  test_installer_bundle.py  test_installer_failure_modes.py  test_poetry_dependencies.py  test_python_runtime.py  test_schema_core.py  test_schema_export.py  (+3 more)
(+52 files in other folders)
